Add minimumCost field to illConfig (#781)
* Add minimumCost field to illConfig
