# directory/api/catalog_config.go
@@ -253,6 +253,7 @@ func illConfigToDBParams(entryID uuid.UUID, cfg IllConfig) db.UpsertIllConfigPar
 		DuplicateCheckWindowHours:   cfg.DuplicateCheckWindowHours,
 		DefaultLoanPeriod:           nullableLoanPeriod(cfg),
 		MaxRequestsPerPatron:        nullableMaxRequestsPerPatron(cfg),
+		MinimumCost:                 nullableMinimumCost(cfg),
 	}
 	if cfg.Iso18626Vendor != nil {
 		vendor := string(*cfg.Iso18626Vendor)
@@ -278,6 +279,7 @@ func illConfigPatchToDBParams(entryID uuid.UUID, cfg IllConfig, original db.IllC
 		DuplicateCheckWindowHours:   original.DuplicateCheckWindowHours,
 		DefaultLoanPeriod:           original.DefaultLoanPeriod,
 		MaxRequestsPerPatron:        original.MaxRequestsPerPatron,
+		MinimumCost:                 original.MinimumCost,
 	}
 
 	params.IsPickupLocation = derefOrDefaultPtr(cfg.IsPickupLocation, params.IsPickupLocation)
@@ -303,6 +305,9 @@ func illConfigPatchToDBParams(entryID uuid.UUID, cfg IllConfig, original db.IllC
 	if cfg.MaxRequestsPerPatron.IsSpecified() {
 		params.MaxRequestsPerPatron = nullableMaxRequestsPerPatron(cfg)
 	}
+	if cfg.MinimumCost.IsSpecified() {
+		params.MinimumCost = nullableMinimumCost(cfg)
+	}
 	return params
 }
 
@@ -316,6 +321,14 @@ func nullableLoanPeriod(cfg IllConfig) *int32 {
 
 func nullableMaxRequestsPerPatron(cfg IllConfig) *int32 {
 	value, err := cfg.MaxRequestsPerPatron.Get()
+	if err != nil {
+		return nil
+	}
+	return &value
+}
+
+func nullableMinimumCost(cfg IllConfig) *float64 {
+	value, err := cfg.MinimumCost.Get()
 	if err != nil {
 		return nil
 	}
