# directory/api/entries.go
@@ -295,7 +295,8 @@ func buildEntrySQL(whereClause string) string {
 			'supplierPatronPattern', i.supplier_patron_pattern,
 			'duplicateCheckWindowHours', i.duplicate_check_window_hours,
 			'defaultLoanPeriod', i.default_loan_period,
-			'maxRequestsPerPatron', i.max_requests_per_patron
+			'maxRequestsPerPatron', i.max_requests_per_patron,
+			'minimumCost', i.minimum_cost
 		)) FROM ill_configs i WHERE i.entry = e.id) as ill_config,
 		(
 		SELECT 
