# directory/import/model/config.go
@@ -39,6 +39,7 @@ type ILLConfig struct {
 	IsPickupLocation            *bool       `json:"isPickupLocation"`
 	DefaultLoanPeriod           *int32      `json:"defaultLoanPeriod"`
 	MaxRequestsPerPatron        *int32      `json:"maxRequestsPerPatron"`
+	MinimumCost                 *float64    `json:"minimumCost"`
 	ISO18626URL                 *string     `json:"iso18626Url"`
 	ISO18626Vendor              *string     `json:"iso18626Vendor"`
 	LendersOfLastResort         []SymbolRef `json:"lendersOfLastResort"`
